# windows-rs-generic-test

./: Cargo.toml  README  build.rs
.github/workflows/: build-docs.yaml  build.yaml  macro-expand.yaml
src/: main.rs
