[package]
name = "generic-test"
version = "0.1.0"
authors = ["Zachary Catlin <z@zc.is>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#windows = "0.4.0"
windows = { git = "https://github.com/zec/windows-rs.git", branch = "generic-interface-impl" }

[build-dependencies]
#windows = "0.4.0"
windows = { git = "https://github.com/zec/windows-rs.git", branch = "generic-interface-impl" }
